# qhttpx

./: .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md  package-lock.json  package.json  test.db  tsconfig.json
.github/workflows/: npm-publish.yml
bench/: comparison.ts  qhttpx-server.ts
core/: Cargo.toml  README.md  index.d.ts  index.js  package.json
core/src/: database.rs  debug_type.rs  governor.rs  lib.rs  router.rs  server.rs
docs/: README.md  benchmarks.md
docs/design/: architecture.md
docs/guides/: README.md  advanced-features.md  ai-usage.md  core-features.md  databases.md  websockets.md
docs/planning/: roadmap.md
docs/reference/: API.md
examples/: benchmark.ts  body_demo.ts  chat_client.ts  chat_demo.ts  cluster_demo.ts  cors_demo.ts  db_auth_demo.ts  demo.ts  headers_demo.ts  hello.ts  http2_demo.ts  magic-dev.ts  middleware_demo.ts  mongo_demo.ts  native_policy_demo.ts  observability_demo.ts  query_demo.ts  response_demo.ts  routing_demo.ts  server.ts  static_demo.ts  test_middleware_client.ts  test_query_client.ts  test_response_client.ts  tls_demo.ts  upload_demo.ts  verify_upload.ts  ws_client.ts  ws_demo.ts
examples/uploads/: test.txt
sample-app/: index.ts  package-lock.json  package.json
sample-app/frontend/: package-lock.json  package.json  vite.config.ts
sample-app/src/: index.ts
scripts/: fix-core-types.js
src/: cli.ts  compose.ts  context.ts  env.ts  fluent.ts  generator.ts  index.ts  test.ts
tests/: app.test.ts  lifecycle.test.ts
types/: index.ts
(+21 files in other folders)
